# stryke-k8s

./: Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: apply.stk  cluster_info.stk  discover.stk  get.stk  logs.stk
lib/: K8s.stk
src/: lib.rs  main.rs
t/: test_k8s.stk  test_stryke_k8s_surface.stk
tests/: contract_cli_round4.rs
