[package]
name = "stryke-k8s-helper"
version = "0.1.1"
edition = "2021"
description = "Kubernetes bridge binary for the stryke `k8s` package."
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-k8s"
homepage = "https://menketechnologies.github.io/stryke-k8s/"
publish = false

[[bin]]
name = "stryke-k8s-helper"
path = "src/main.rs"

[dependencies]
kube = { version = "0.95", default-features = false, features = [
    "client", "rustls-tls", "config", "runtime", "derive", "ws",
] }
k8s-openapi = { version = "0.23", features = ["latest"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "signal"] }
futures-util = "0.3"
clap = { version = "4", default-features = false, features = [
    "std", "derive", "help", "usage", "error-context", "env",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
either = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
