[package]
name = "stryke-k8s"
version = "0.2.0"
edition = "2021"
description = "Kubernetes cdylib for the stryke `k8s` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-k8s"
homepage = "https://menketechnologies.github.io/stryke-k8s/"
publish = false

[lib]
name = "stryke_k8s"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
kube = { version = "0.95", default-features = false, features = [
    "client", "rustls-tls", "config", "runtime", "derive",
] }
k8s-openapi = { version = "0.23", features = ["latest"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "signal"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
either = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
